# hs-arrow

./: .gitignore  LICENSE  README.md  Setup.hs  TODO.org  hs-arrow.cabal  package.yaml  stack.yaml
app/: Main.hs
gi-arrow/: gi-arrow.cabal
gi-arrow/GI/: Arrow.hs
gi-arrow/GI/Arrow/: Constants.hs  Enums.hs  Enums.hs-boot  Interfaces.hs  Objects.hs
gi-arrow/GI/Arrow/Interfaces/: File.hs  File.hs-boot  Readable.hs  Readable.hs-boot  Writeable.hs  Writeable.hs-boot  WriteableFile.hs  WriteableFile.hs-boot
gi-arrow/GI/Arrow/Objects/: Array.hs  Array.hs-boot  ArrayBuilder.hs  ArrayBuilder.hs-boot  BinaryArray.hs  BinaryArray.hs-boot  BinaryArrayBuilder.hs  BinaryArrayBuilder.hs-boot  BinaryDataType.hs  BinaryDataType.hs-boot  BooleanArray.hs  BooleanArray.hs-boot  BooleanArrayBuilder.hs  BooleanArrayBuilder.hs-boot  BooleanDataType.hs  BooleanDataType.hs-boot  Buffer.hs  Buffer.hs-boot  BufferInputStream.hs  BufferInputStream.hs-boot  BufferOutputStream.hs  BufferOutputStream.hs-boot  CastOptions.hs  CastOptions.hs-boot  ChunkedArray.hs  ChunkedArray.hs-boot  Column.hs  Column.hs-boot  DataType.hs  DataType.hs-boot  Date32Array.hs  Date32Array.hs-boot  Date32ArrayBuilder.hs  Date32ArrayBuilder.hs-boot  Date32DataType.hs  Date32DataType.hs-boot  Date64Array.hs  Date64Array.hs-boot  Date64ArrayBuilder.hs  Date64ArrayBuilder.hs-boot  (+176 more)
src/: Eg.hs  HsArrow.hs  Lib.hs
