name:                hs-arrow
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stephenpascoe/inline-cpp#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen Pascoe
maintainer:          Stephen.Pascoe@nanoporetech.com
copyright:           BSD3
category:            unknown
-- build-type:          Custom
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     HsArrow
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       inline-c >= 0.5.6.1 && < 0.7,
                       inline-c-cpp >= 0.2.1.0 && < 0.3,
                       mtl >= 2.2 && < 2.3,
                       bytestring
  extra-libraries:     stdc++ arrow
  -- include-dirs:        /usr/local/include
  include-dirs:        /Users/spascoe/opt/arrow/include
  ghc-options:         -optc-std=c++11 -optc-Wno-unused-result

executable hs-arrow
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hs-arrow
